fix: resolve horizontal scroll overflow bug on mobile view

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -797,6 +797,9 @@
   .max-w-\[550px\] {
     max-width: 550px;
   }
+  .max-w-full {
+    max-width: 100%;
+  }
   .max-w-lg {
     max-width: var(--container-lg);
   }
@@ -2532,6 +2535,12 @@
   .sm\:p-3 {
     @media (width >= 40rem) {
       padding: calc(var(--spacing) * 3);
+    }
+  }
+  .sm\:text-3xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
   .sm\:text-lg {
